--- a/pyproject.toml
+++ b/pyproject.toml
@@ -352,6 +352,7 @@ split-on-trailing-comma = false
     "PLC2701",
     "PLR2004",
     "PLR6301",
+    "RUF069",
     "S101",
     "SLF001",
     "T20",
